Fix gameplay review blockers